# palette-mapper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE_MIT.txt  README.md  _typos.toml  clippy.toml  fetch-palettes.sh  flake.nix  taplo.toml
.github/workflows/: checks.yml  e2e.yml  pages.yml
assets/test-imgs-gimp/: diagonal_rgb_gradient_500x500.xcf  vertical_rgb_horizontal_alpha_500x500.xcf
cli/: Cargo.toml
cli/src/: main.rs  step.rs
lib/: Cargo.toml
lib/benches/: lib_bench.rs
lib/src/: conversions.rs  distance.rs  lib.rs  palette.rs
lib/src/palette/: serde.rs
lib/src/snapshots/: palette_mapper__distance__test__cie76_vertical_rgb_horizontal_alpha_500x500.snap
macros/: Cargo.toml
macros/src/: lib.rs
palettes/: Cargo.toml  build.rs
palettes/base16/: 0x96f.json  3024.json  apathy.json  apprentice.json  ascendancy.json  ashes.json  atelier-cave-light.json  atelier-cave.json  atelier-dune-light.json  atelier-dune.json  atelier-estuary-light.json  atelier-estuary.json  atelier-forest-light.json  atelier-forest.json  atelier-heath-light.json  atelier-heath.json  atelier-lakeside-light.json  atelier-lakeside.json  atelier-plateau-light.json  atelier-plateau.json  atelier-savanna-light.json  atelier-savanna.json  atelier-seaside-light.json  atelier-seaside.json  atelier-sulphurpool-light.json  atelier-sulphurpool.json  atlas.json  ayu-dark.json  ayu-light.json  ayu-mirage.json  aztec.json  bespin.json  black-metal-bathory.json  black-metal-burzum.json  black-metal-dark-funeral.json  black-metal-gorgoroth.json  black-metal-immortal.json  black-metal-khold.json  black-metal-marduk.json  black-metal-mayhem.json  (+263 more)
palettes/base24/: 0x96f.json  3024-day.json  3024-night.json  3024.json  adventure-time.json  alien-blood.json  apathy.json  argonaut.json  arthur.json  ashes.json  atelier-cave-light.json  atelier-forest.json  atelier-lakeside-light.json  atelier-lakeside.json  atelier-seaside.json  atelier-sulphurpool-light.json  atelier-sulphurpool.json  ayu-dark.json  ayu-light.json  ayu-mirage.json  aztec.json  banana-blueberry.json  batman.json  bespin.json  birds-of-paradise.json  black-metal-burzum.json  black-metal-immortal.json  black-metal-khold.json  black-metal-marduk.json  black-metal-nile.json  black-metal.json  blazer.json  blue-berry-pie.json  blue-matrix.json  blueforest.json  bluloco-dark.json  bluloco-light.json  borland.json  breeze.json  broadcast.json  (+264 more)
palettes/src/: lib.rs
palettes/templates/: lib.rs.askama
web/: .pre-commit-config.yaml  Cargo.toml  deno.json  index.css  index.html  index.js  playwright.config.ts  svelte.config.js  vite.config.ts
web/e2e/: Dockerfile
web/e2e/tests/: convert-image-base16.spec.js  load.js
web/src/: lib.rs
web/src/lib/: clear_btn.svelte  file_upload.svelte  index.ts  notifications.svelte  notifications.svelte.ts  row.svelte  site_title.svelte  theme_toggle.svelte  ui_notification.svelte  ui_notification.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  img.svelte  img.svelte.ts  palette.svelte  palette_search.svelte  sidebar.svelte  sidebar.svelte.ts  wasm.worker.ts
web/static/: font.css  global.css  vars.css
web/static/fonts/Chakra_Petch/: OFL.txt
web/static/fonts/Stack_Sans_Notch/: OFL.txt
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
