[workspace]
members = ["lib", "cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
palette-mapper = { version = "*", path = "./lib", default-features = false }
image = { version = "0.25.9", default-features = false }
clap = { version = "4.5.54", features = ["derive", "string"] }
serde = { version = "1.0.228", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

allow_attributes_without_reason = "deny"
doc_broken_link = "warn"
future_not_send = "allow"
missing_docs_in_private_items = "warn"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "warn"
