[workspace]
members = ["cli", "lib", "macros", "palettes", "web"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
palette-mapper-lib = { version = "*", path = "./lib", default-features = false }
palette-mapper-macros = { version = "*", path = "./macros" }

clap = { version = "4.5.54", features = ["derive", "string"] }
image = { version = "0.25.9", default-features = false }
rayon.version = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27", features = ["derive"] }
wasm-bindgen = "0.2.108"

# dev
criterion = "0.8.1"
insta = "1.46.0"
rand = "0.9.2"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

allow_attributes_without_reason = "deny"
doc_broken_link = "warn"
missing_docs_in_private_items = "warn"
too_long_first_doc_paragraph = "warn"

arbitrary_source_item_ordering = "deny"
