[package]
name = "palette-mapper-cli"
edition.workspace = true
version.workspace = true
default-run = "palette-mapper"

[dependencies]
palette-mapper-lib = { workspace = true, features = [
    "default",
    "serde",
    "strum",
] }
image = { workspace = true, features = ["default", "serde"] }
clap.workspace = true
anyhow = "1.0.100"
serde_json.workspace = true
strum.workspace = true

[lints]
workspace = true

[[bin]]
name = "palette-mapper"
path = "src/main.rs"
