[package]
default-run = "palette-mapper"
edition.workspace = true
name = "palette-mapper-cli"
version.workspace = true

[dependencies]
palette-mapper-lib = { workspace = true, features = [
  "default",
  "serde",
  "strum",
] }
palette-mapper-palettes = { workspace = true, features = ["strum"] }

anstyle = "1.0.13"
anyhow = "1.0.100"
clap.workspace = true
image = { workspace = true, features = ["default", "serde"] }
serde_json.workspace = true
strum.workspace = true

[lints]
workspace = true

[[bin]]
name = "palette-mapper"
path = "src/main.rs"
