[package]
name = "palette-mapper-lib"
edition.workspace = true
version.workspace = true

[dependencies]
image = { workspace = true, features = [] }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
palette-mapper-macros.workspace = true

[features]
default = ["rayon", "default-formats"]
serde = ["image/serde", "dep:serde"]
strum = ["dep:strum"]
rayon = ["image/rayon", "dep:rayon"]
default-formats = ["image/default-formats"]

[lints]
workspace = true

[dev-dependencies]
rayon.workspace = true
serde_json.workspace = true
criterion.workspace = true
# we always use rayon for testing / benching setup code 
image = { workspace = true, features = ["rayon"] }
rand.workspace = true

[[bench]]
name = "lib_bench"
harness = false

[lib]
name = "palette_mapper"
path = "src/lib.rs"
