[package]
edition.workspace = true
name = "palette-mapper-lib"
version.workspace = true

[dependencies]
image = { workspace = true, features = [] }
palette-mapper-macros.workspace = true
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
thiserror = "2.0.17"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true

[features]
default = ["default-formats", "rayon"]
default-formats = ["image/default-formats"]
rayon = ["dep:rayon", "image/rayon"]
serde = ["dep:serde", "image/serde"]
strum = ["dep:strum"]

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
rayon.workspace = true
serde_json.workspace = true
strum.workspace = true
# we always use rayon for testing / benching setup code 
image = { workspace = true, features = ["rayon"] }
rand.workspace = true

[[bench]]
harness = false
name = "lib_bench"

[lib]
name = "palette_mapper"
path = "src/lib.rs"
