[package]
edition.workspace = true
name = "palette-mapper-palettes"
version.workspace = true

[dependencies]
image = { workspace = true }
palette-mapper-lib = { workspace = true }
strum = { workspace = true, optional = true }

[features]
strum = ["dep:strum"]

[lints]
workspace = true

[build-dependencies]
askama = { version = "0.15.1", default-features = false, features = [
  "derive",
  "std",
] }
heck = "0.5.0"
palette-mapper-lib = { workspace = true, features = ["serde"] }
serde_json.workspace = true
