[package]
edition.workspace = true
name = "palette-mapper-web"
version.workspace = true

[dependencies]
image = { workspace = true, features = ["default-formats", "rayon"] }
palette-mapper-lib = { workspace = true, features = [
  "default",
  "serde",
  "strum",
] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
